--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <script src="https://kit.fontawesome.com/f3cfa225fc.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
  
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
